# kronova-rust-nextjs-example

./: .gitignore  README.md  RESUME-PROJECT-SUMMARY.md  VALUATION-V2-WITH-PLAID.md  VALUATION.md  middleware.ts  package.json  pnpm-lock.yaml  vercel.json
app/: globals.css  layout.tsx
app/actions/: auth.ts
app/dashboard/: layout.tsx  page.tsx
components/: theme-provider.tsx
components/dashboard/: add-asset-dialog.tsx  agent-card.tsx  agent-metrics-chart.tsx  agent-performance-chart.tsx  agents-page-client.tsx  ai-agents.tsx  ai-asset-analytics-dashboard.tsx  ai-insights-dashboard.tsx  ai-reports-dashboard.tsx  ai-request-logs-dashboard.tsx  api-key-manager.tsx  asset-detail-view.tsx  asset-gateway.tsx  asset-management.tsx  asset-overview-chart.tsx  asset-selector.tsx  business-cards.tsx  execution-history.tsx  (+21 more)
docs/: SDK-USAGE.md  SUPABASE_API_KEY_MIGRATION.md
emails/: team-invitation.tsx  welcome-email.tsx
lib/: ai-asset-analytics.ts  ai-config.ts  ai-retry.ts  api-client.ts  blockchain-explorer.ts  data-stream-manager.ts  database.types.ts  kronova-api-client.ts  resendit-api-client.ts  supabase-types.ts  webhook-delivery.ts  workflow-execution-engine.ts
public/: manifest.json  sw.js
scripts/: add-stripe-webhook-secret-env.sql  create-advanced-validate-api-key.sql  create-ai-agent-runs-table.sql  create-api-keys-wrapper-functions.sql  create-has-api-key-scope-function.sql  create-plaid-accounts-table.sql  create-plaid-connections-table.sql  create-public-validate-api-key-wrapper.sql  fix-validate-api-key-with-pgcrypto.sql  update-validate-api-key-with-algorithm.sql  v2-create-advanced-validate-api-key.sql  v3-definitive-validate-api-key-cleanup.sql
supabase/functions/auth-signin/: Cargo.toml
supabase/functions/auth-signin/src/: lib.rs
supabase/functions/auth-signup/: Cargo.toml
supabase/functions/auth-signup/src/: lib.rs
supabase/functions/business-cards-create/: Cargo.toml
supabase/functions/business-cards-create/src/: lib.rs
supabase/functions/iot-sensors-ingest/: Cargo.toml
supabase/functions/iot-sensors-ingest/src/: lib.rs
(+84 files in other folders)
