[package]
name = "auth-signin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
supabase-wrappers = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "Response",
  "Headers",
]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]
