[package]
name = "business-cards-create"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
supabase-wrappers = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
